--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inlinify",
+  "name": "Funlinify",
   "version": "0.0.1",
   "description": "Inline javascript functions within a file (inline expansion).",
   "main": "index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/llafuente/inlinify.git"
+    "url": "https://github.com/llafuente/funlinify.git"
   },
   "keywords": [
     "arguments",
@@ -27,9 +27,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/llafuente/inlinify/issues"
+    "url": "https://github.com/llafuente/funlinify/issues"
   },
-  "homepage": "https://github.com/llafuente/inlinify",
+  "homepage": "https://github.com/llafuente/funlinify",
   "dependencies": {
     "browserify-transform-tools": "^1.2.1",
     "cssauron-falafel": "^1.2.1",
