--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
   },
   "homepage": "https://github.com/llafuente/funlinify",
   "dependencies": {
+    "esprima-ast-utils": "*",
     "browserify-transform-tools": "^1.2.1",
     "cssauron-falafel": "^1.2.1",
-    "escodegen": "^1.3.3",
-    "object-enhancements": "^0.1.1",
-    "esprima": "^1.2.2"
+    "object-enhancements": "^0.1.1"
   },
   "devDependencies": {
     "browserify": "^4.1.9",
